// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField deve renderizar corretamente 1`] = `
<div>
  <div />
</div>
`;

exports[`FormField deve renderizar o label 1`] = `
<div>
  <FormLabel
    label="label teste"
  />
  <div />
</div>
`;

exports[`FormField deve renderizar os filhos 1`] = `
<div>
  <div>
    <Input
      type="text"
    />
  </div>
</div>
`;
